cleaned up build.gradles. Meanlib vendordeps and libraries sync across subprojects. Lots of comment-outs